<resources>
    <string name="app_name">LENS</string>

    <string name="navigation_drawer_open">Abre o navegador drawer</string>
    <string name="navigation_drawer_close">Fecha o navegador drawer</string>

    // Strings de Titulos
    <string name="title_home">Início</string>
    <string name="title_dashboard">DashBord</string>
    <string name="title_notifications">Notícias</string>

    // Strings que se refer ao Action_*
    <string name="action_add">Adicionar</string>
    <string name="action_carrinho">Carrinho de Compras</string>
    <string name="action_oferta">Oferta do Dia</string>
    <string name="action_sistema">Acessar o Sistema</string>
    <string name="action_avatar">Monte seu Avatar</string>
    <string name="action_contato">Contato</string>
    <string name="action_voltar">Voltar</string>

    // Strings que se refer ao menuNavBotMenu
    <string name="nav_bot_menu_home">Iníciar</string>
    <string name="nav_bot_menu_dashboard">DashBoard</string>
    <string name="nav_bot_menu_notifications">Notícias</string>
    <string name="nav_bot_menu_oferta">Oferta</string>

    <string name="nav_bot_menu_carrinho">Carrinho</string>

    <string name="menu_oferta">Menhor Oferta</string>

    <string name="menu_contato">Entre em Contato</string>
    <string name="menu_adicionar">Adicionar</string>
    <string name="menu_dashboard">Dash Board</string>
    <string name="menu_notifications">Notícias</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_lojas">Lojas</string>
    <string name="menu_outlet">OutLet</string>
    <string name="menu_feminino">Feminino</string>
    <string name="menu_masculino">Masculino</string>
    <string name="menu_unissex">Unissex</string>
    <string name="menu_promocao">Promoção</string>

    <string name="nav_header_title">Ótica LENS</string>
    <string name="nav_header_subtitle">atendimento@oticalens.com.br</string>
    <string name="nav_header_desc">Navegação de cabeça</string>

    <string name="action_settings">Configurações</string>
    <string name="action_sair">Sair</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Galeria</string>
    <string name="menu_slideshow">Apresentação</string>
    <string name="menu_pesquisar">Pesquisar</string>
    <string name="menu_sistema">Sistema</string>
    <string name="menu_avatar">Avatar</string>
    <string name="dummy_button">Monte seu Avatar</string>
    <string name="dummy_content">Bem vindo\nao\nAvatar</string>

</resources>