<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <!--
    Ester fragmento esta endereçado ao Home
    -->
    <fragment
        android:id="@+id/nav_home"
        android:name="br.com.oticaslens.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"
        />

    <!--
    Ester fragmento esta endereçado ao Galeria
    -->
    <fragment
        android:id="@+id/nav_gallery"
        android:name="br.com.oticaslens.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery"
        />

    <!--
    Ester fragmento esta endereçado ao Apresentação Slides PPT
    -->
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="br.com.oticaslens.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow"
        />

    <!--
    Ester fragmento esta endereçado ao pesquisar
    -->
    <fragment
        android:id="@+id/nav_pesquisar"
        android:name="br.com.oticaslens.ui.pesquisar.PesquisarFragment"
        android:label="@string/menu_pesquisar"
        tools:layout="@layout/fragment_pesquisar"
        />

    <!--
    Ester fragmento esta endereçado ao avatar
    -->
    <fragment
        android:id="@+id/nav_avatar"
        android:name="br.com.oticaslens.ui.avatar.MonteSeuAvatarFullscreenFragment"
        android:label="@string/menu_avatar"
        tools:layout="@layout/fragment_monte_seu_avatar_fullscreen"
        />

    <!--
    Ester fragmento esta endereçado ao lojas
    -->
    <fragment
        android:id="@+id/nav_lojas"
        android:name="br.com.oticaslens.ui.lojas.LojasFragment"
        android:label="@string/menu_lojas"
        tools:layout="@layout/fragment_lojas"
        />

    <!--
    Ester fragmento esta endereçado ao outLet
    -->
    <fragment
        android:id="@+id/nav_outlet"
        android:name="br.com.oticaslens.ui.outlet.OutletFragment"
        android:label="@string/menu_outlet"
        tools:layout="@layout/fragment_outlet"
        />

    <!--
    Ester fragmento esta endereçado ao Feminino
    -->
    <fragment
        android:id="@+id/nav_feminino"
        android:name="br.com.oticaslens.ui.feminino.FemininoFragment"
        android:label="@string/menu_feminino"
        tools:layout="@layout/fragment_feminino"
        />

    <!--
    Ester fragmento esta endereçado ao Masculino
    -->
    <fragment
        android:id="@+id/nav_masculino"
        android:name="br.com.oticaslens.ui.masculino.MasculinoFragment"
        android:label="@string/menu_masculino"
        tools:layout="@layout/fragment_masculino"
        />

    <!--
     Ester fragmento esta endereçado ao unissex
     -->
    <fragment
        android:id="@+id/nav_unissex"
        android:name="br.com.oticaslens.ui.unissex.UnissexFragment"
        android:label="@string/menu_unissex"
        tools:layout="@layout/fragment_unissex"
        />

    <!--
     Ester fragmento esta endereçado ao promoção
     -->
    <fragment
        android:id="@+id/nav_promocao"
        android:name="br.com.oticaslens.ui.promocao.PromocaoFragment"
        android:label="@string/menu_promocao"
        tools:layout="@layout/fragment_promocao"
        />

    <!--
     Ester fragmento esta endereçado ao sistema
     -->
    <fragment
        android:id="@+id/nav_sistema"
        android:name="br.com.oticaslens.ui.sistema.SistemaFullscreenFragment"
        android:label="@string/menu_sistema"
        tools:layout="@layout/fragment_sistema_fullscreen"
        />


</navigation>