<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_carrinho"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_carrinho"
        android:title="@string/action_carrinho"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_configurar"
        android:title="@string/action_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_voltar"
        android:orderInCategory="100"
        android:icon="@drawable/ic_nav_menu_voltar"
        android:title="@string/action_voltar"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_sair"
        android:orderInCategory="100"
        android:icon="@drawable/ic_nav_sair"
        android:title="@string/action_sair"
        app:showAsAction="always" />

</menu>